--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,22 @@
 			  <artifactId>jetty-maven-plugin</artifactId>
 			  <version>9.4.28.v20200408</version>
 			</plugin>
+			<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.1</version>
+</plugin>
+
+<plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.8.1</version>
+</plugin>
+
 		</plugins>
 	</build>
+	
+	
 	
   <modules>
 	<module>monappli-domaine</module>
